fixed header being too low

--- a/public/index.css
+++ b/public/index.css
@@ -27,7 +27,6 @@ div#header{
 
 .hero-content {
   position: absolute;
-  top: 40%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   text-align: center;
